fix: main content sizes spacing and add footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,16 @@ body {
     background-color: hsl(221, 100%, 96%);
     font-family: "Hanken Grotesk", sans-serif;
     font-size: 18px;
-    width: 1440px;
+    width: 100vw;
     height: 100%;
+    display: flex;
+    justify-content: center;
 }
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 80px;
 }
 
 .your-result {
@@ -16,12 +19,18 @@ body {
     height: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background: linear-gradient( hsl(252, 100%, 67%),hsl(241, 81%, 54%));
     color: #ffffff;
-    border-radius: 50px;
+    border-radius: 30px;
     padding: 20px 50px;
+    position: relative;
+    z-index: 2;
+}
+.your-result-title {
+    font-size: 26px;
+    color: rgba(255, 255, 255, 0.75);
+    margin: 15px;
 }
 
 .darkest-circle {
@@ -29,10 +38,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    height: 200px;
+    width: 190px;
+    height: 190px;
     background: linear-gradient(  hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
     border-radius: 100%;
+    margin-top: 20px;
 }
 
 .result-value {
@@ -47,32 +57,55 @@ body {
     margin: 0;
 }
 
+.result-title {
+    font-size: 30px;
+    margin-top: 25px;
+}
+
+.results-description {
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.75);
+    margin: 20px 10px;
+    padding: 0 10px;
+    text-align: center;
+}
+
 .summary {
     width: 400px;
     height: 500px;
     display: flex;
     flex-direction: column;
     background-color: hsl(0, 0%, 100%);
-    border-radius: 0 50px 50px 0;
-    padding: 20px 50px;
+    border-radius: 30px; 
+    padding: 20px 40px 30px 90px;
+    margin-left: -50px;
+    z-index: 1;
+}
+
+.summary-title {
+    font-size: 26px;
+    margin: 15px;
 }
 
 .itens {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 18px;
+    margin-top: 10px;
 }
 
  .item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 50px;
     padding: 0 20px;
-    border-radius: 20px;
+    border-radius: 10px;
+    font-weight: 600;
 }
 .item p {
     color: rgba(128, 128, 128, 0.765);
-    font-weight: 800;
 }
 
 .left {
@@ -91,28 +124,42 @@ body {
     color: hsl(0, 100%, 67%);
 }
 
-.memory{
+.itens .memory{
     background-color: hsl(39, 100%, 56%, 0.1);
     color: hsl(39, 100%, 56%);
 }
 
-.verbal{
+.itens .verbal{
     background-color: hsl(166, 100%, 37%, 0.1);
     color: hsl(166, 100%, 37%);
 }
 
-.visual{
+.itens .visual{
     background-color: hsl(234, 85%, 45%, 0.1);
     color: hsl(234, 85%, 45%);
 }
 
 .btn-continue {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 60px;
     margin-top: 40px;
     background-color: hsl(224, 30%, 27%);
     color: #ffffff;
     font-size: 18px;
     font-weight: 700;
-    padding: 20px;
     border-radius: 50px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: hsl(224, 30%, 27%);
+  color: white;
+  text-align: center;
+  padding: 15px;
 }
